Selection API: Selection.extend() should throw if rangeCount is 0.

Fixes 88 tests in external/wpt/selection/extend-00.html.
The new behavior matches to the standard and Firefox.

* assert_selection.js:
  Prevent load() from throwing an InvalidStateError while running
  editing/deleting/typing_one_character_delete_crash.html

BUG=690240

Review-Url: https://codereview.chromium.org/2686663004
Cr-Commit-Position: refs/heads/master@{#449213}

Former-commit-id: de2a69791692ee94fa066dec6bcaf2f2075072c1